# nub

./: .gitignore  .vercelignore  AGENTS.md  Cargo.toml
.claude/: settings.json
.claude/hooks/: gh-comment-guard.mjs
.claude/skills/address-issue/: SKILL.md
crates/nub-cache-key/: Cargo.toml
crates/nub-cli/: Cargo.toml
crates/nub-cli/src/pm_engine/: mod.rs  unsupported_config.rs
crates/nub-cli/tests/: integration.rs
crates/nub-core/src/: config_cache.rs  lib.rs
crates/nub-core/src/pm/: resolve.rs
crates/nub-core/src/workspace/: filter.rs
crates/nub-native/src/: detect.rs
npm/nub/: package.json
npm/nub-darwin-arm64/: package.json
npm/nub-darwin-x64/: package.json
npm/nub-linux-arm64/: package.json
npm/nub-linux-arm64-musl/: package.json
npm/nub-linux-x64/: package.json
npm/nub-linux-x64-musl/: package.json
npm/nub-types/: index.d.ts
npm/nub-win32-arm64/: package.json
npm/nub-win32-x64/: package.json
runtime/: preload-async-hooks.mjs  preload-common.cjs  preload.cjs  transform-core.mjs  version.mjs  worker-blob-url.cjs  worker-polyfill.mjs
scripts/: ci-watch.ts
site/content/docs/: faq.mdx
site/content/docs/install/: index.mdx
site/content/docs/runtime/: index.mdx  resolution.mdx  typescript.mdx  workers.mdx
site/content/guides/: bun-to-nub.mdx
site/src/app/: layout.tsx
site/src/app/llms.txt/: route.ts
site/src/components/: install-tabs.tsx
stats/download-counts/: 20260624T143114Z.json  20260627T041715Z.json  20260628T045240Z.json  20260629T050034Z.json  20260630T043451Z.json  20260701T045454Z.json  20260702T043149Z.json
tests/fixtures/project-js/: cjs-format.cjs  decorator.js  esm-format.mjs  main-deps.js  noop.js  using.js  vflag-regexp.js
tests/fixtures/transpile-js-smoke/: guard.cjs  guard.js  guard.mjs
tests/fixtures/worker/: blob-file-instanceof.ts  blob-url-main.ts  broadcastchannel-main.ts  classic-dep.cjs  classic-main.ts  classic-worker.cjs  data-url-main.ts  error-location-main.ts  error-location-worker.ts  messagechannel-main.ts  messagechannel-worker.ts  module-importscripts-throws-main.ts  module-importscripts-worker.ts  name-main.ts  name-worker.ts  spec-events-main.ts  spec-events-worker.ts  transfer-detach-main.ts  transfer-detach-worker.ts  unnamed-main.ts
